+Fixed: animation jumps of tootip fade in

--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ div#tooltip_box{
 }
 
 div#tooltip_box>table,div#tooltip_box>table>tbody,div#tooltip_box>table>tbody>tr{
-    height: 100%;
+    height: 99%;
     display: block;
 }
 div#tooltip_box>table>tbody>tr>td:not(.tooltip_span){
